--- a/CH2_3_Ex1_.html
+++ b/CH2_3_Ex1_.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-  <link href="CH2_2_style.css" rel="stylesheet"  />
+  <link href="CH2_3_Ex1_style.css" rel="stylesheet"  />
   <title> CH2_3_Ex1 </title>
 </head>
 
