--- a/CH1-3-1.HTML.html
+++ b/CH1-3-1.HTML.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Histoire du football</title>
 		<h1>Histoire du football.</h1>
 	</head>
