--- a/CH1-3-2.HTML
+++ b/CH1-3-2.HTML
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+     <meta charset="UTF-8">
+     <title>CH1-3-2</title>
   <body>
     <h1>Mes Listes</h1>
     <h2>Voici une liste non ordonnée (puce par défaut)</h2>
