--- a/CH1-3-3.HTML
+++ b/CH1-3-3.HTML
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <head>
+         <meta charset="UTF-8">
+         <title> CH1-3-3 </title>
+    </head>
+    <body>      
 <p><strong>MES LISTES IMBRIQUEES</strong> <br> 
     Voici une liste imbriquée :
     <ul>
