--- a/CH1-4-1.HTML
+++ b/CH1-4-1.HTML
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 	<html>
+		<head>
+			<meta charset="UTF-8">
+			<title> CH1-4-1 </title>
+		</head>
 <body>
 	<p><strong> Mes liens : </p>
 Actualités :
