--- a/CH1-5-1.HTML
+++ b/CH1-5-1.HTML
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<title> CH1-5-1 </title>
+	</head>
 	<figure>
 			<center>
 				<img src="pergaud.jpg" alt="Le lycée Pergaud"/>
